--- a/depot/test/fixtures/orders.yml
+++ b/depot/test/fixtures/orders.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: Dave Thomas
-  address: MyText
-  email: dave@example.org
+  name: Carl Fox
+  address: 111 Brier Lane
+  email: carl@dafox.com
   pay_type: Check
 
 two:
